--- a/forward regression.ipynb
+++ b/forward regression.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from numpy import linalg as LA\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn import datasets, linear_model\n",
@@ -33,19 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 100\n",
-    "m = 2\n",
+    "m = 20\n",
     "A = np.random.rand(n, m)\n",
     "y = np.random.rand(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 201,
    "metadata": {
     "scrolled": true
    },
@@ -56,7 +57,7 @@
        "(100, 20)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
        "(100,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100, 2)"
+       "(100, 20)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,35 +113,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the function below returns a covariance matrix for columns x_1, x_2,... of matrix X \n",
     "# normalized to have expectation 0 and variation 1\n",
     "def get_covariance_matrix(X):\n",
-    "#     cov_matrix = np.cov(X, bias=True)\n",
-    "    cov_norm=np.corrcoef(X)\n",
-    "    return cov_norm"
+    "    cov_matrix = np.cov(X.T, bias=True)\n",
+    "#     cov_norm=np.corrcoef(X)\n",
+    "    return cov_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.eye(5)\n",
+    "z=np.ones(5)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0:-1, -1:].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.c_[x, z].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get_covariance_matrix(np.c_[x, y])\n",
+    "np.cov(np.c_[x, z].T)[-1,:-1]\n",
+    "# np.corrcoef(np.c_[x, z].T)\n",
+    "# x.shape\n",
+    "# get_covariance_matrix(np.c_[x, y])\n",
+    "# np.corrcoef(np.c_[x, z])\n",
+    "# x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
     "# returns normalized vector of covariances between y and columns x_1, x_2,...of matrix X \n",
     "# \n",
     "def get_covariance_vector(X, y):\n",
-    "    np.c_[X, y]\n",
-    "    res=np.corrcoef(X)\n",
-    "    return res[-1:]"
+    "#     np.c_[X, y]\n",
+    "    res=np.cov(np.c_[X, y].T)[-1,:-1]\n",
+    "    \n",
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +383,81 @@
     "\n",
     "    return np.average(output_scores, weights=avg_weights)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = get_covariance_matrix(X)\n",
+    "b = get_covariance_vector(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20,)"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R-squared coefficient\n",
+    "# \n",
+    "R = np.dot(b.T, np.dot(LA.inv(C), b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 20)"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
