--- a/forward regression.ipynb
+++ b/forward regression.ipynb
@@ -29,24 +29,26 @@
     "\n",
     "Vector $y\\in \\mathbb{R}^n$\n",
     "\n",
-    "We suppose thar $A$ and $y$ are normalized to 1"
+    "We suppose thar $A$ and $y$ are normalized to 1\n",
+    "\n",
+    "Covariance matrix $C \\in \\mathbb{R}^{d\\times d}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 100\n",
     "m = 20\n",
-    "A = np.random.rand(n, m)\n",
+    "A = np.random.rand(m, n)\n",
     "y = np.random.rand(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 309,
    "metadata": {
     "scrolled": true
    },
@@ -54,10 +56,10 @@
     {
      "data": {
       "text/plain": [
-       "(100, 20)"
+       "(20, 100)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,193 +70,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
+   "execution_count": 346,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100,)"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100,)\n"
+     ]
     }
    ],
    "source": [
-    "y.shape"
+    "print(y.shape)\n",
+    "# print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 20)"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X=A\n",
-    "b=y\n",
-    "# np.c_[X, b]\n",
-    "X.shape\n",
-    "# X[-1:]\n",
-    "# np.append(X, b, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the function below returns a covariance matrix for columns x_1, x_2,... of matrix X \n",
     "# normalized to have expectation 0 and variation 1\n",
     "def get_covariance_matrix(X):\n",
-    "    cov_matrix = np.cov(X.T, bias=True)\n",
-    "#     cov_norm=np.corrcoef(X)\n",
+    "    cov_matrix = np.cov(X, bias=True)\n",
     "    return cov_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.eye(5)\n",
-    "z=np.ones(5)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1., 1., 1., 1.])"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[0:-1, -1:].T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 1.],\n",
-       "       [1., 1., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.c_[x, z].T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get_covariance_matrix(np.c_[x, y])\n",
-    "np.cov(np.c_[x, z].T)[-1,:-1]\n",
-    "# np.corrcoef(np.c_[x, z].T)\n",
-    "# x.shape\n",
-    "# get_covariance_matrix(np.c_[x, y])\n",
-    "# np.corrcoef(np.c_[x, z])\n",
-    "# x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
     "# returns normalized vector of covariances between y and columns x_1, x_2,...of matrix X \n",
     "# \n",
     "def get_covariance_vector(X, y):\n",
-    "#     np.c_[X, y]\n",
-    "    res=np.cov(np.c_[X, y].T)[-1,:-1]\n",
-    "    \n",
-    "    return res"
+    "    return np.cov(np.vstack((X_T, y)))[-1,:-1]\n",
+    "    "
    ]
   },
   {
@@ -386,71 +243,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = get_covariance_matrix(X)\n",
-    "b = get_covariance_vector(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(20,)"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 20)\n"
+     ]
     }
    ],
    "source": [
-    "b.shape"
+    "C = get_covariance_matrix(A)\n",
+    "print(C.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 350,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = get_covariance_vector(A, y)\n",
+    "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.019258634477752175\n"
+     ]
+    }
+   ],
    "source": [
     "# R-squared coefficient\n",
     "# \n",
-    "R = np.dot(b.T, np.dot(LA.inv(C), b))"
+    "R = np.dot(b.T, np.dot(LA.inv(C), b))\n",
+    "print(R)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 20)"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "C.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
