ошибка: вектор alpha заполняется нулями

--- a/forward regression.ipynb
+++ b/forward regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from collections import Counter\n",
     "from IPython.core.display import display, HTML\n",
-    "sns.set_style('darkgrid')"
+    "sns.set_style('darkgrid')\n",
+    "import scipy.stats as sps"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the function below returns a covariance matrix for columns x_1, x_2,... of matrix X \n",
+    "# the function below returns a covariance matrix C (m x m) for columns x_1, x_2,... of matrix X (m x n)\n",
     "# normalized to have expectation 0 and variation 1\n",
     "def get_covariance_matrix(X):\n",
     "    cov_matrix = np.cov(X, bias=True)\n",
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -293,8 +294,76 @@
    "source": [
     "# R-squared coefficient\n",
     "# \n",
-    "R = np.dot(b.T, np.dot(LA.inv(C), b))\n",
-    "print(R)"
+    "R_2 = np.dot(b.T, np.dot(LA.inv(C), b))\n",
+    "print(R_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = np.mean(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.19737756 0.75686821 0.87705782 0.07998631 0.81287681]\n",
+      " [0.57081788 0.13171926 0.40505844 0.21287215 0.35543807]\n",
+      " [0.25083931 0.68852299 0.33749733 0.15015977 0.10220112]]\n",
+      "(3, 5)\n",
+      "[0.84156902 0.08420507 0.77366252 0.87797207 0.7480465 ] \n",
+      "y_true shape (5,)\n",
+      "(3,)\n",
+      "[0.69445541 1.19696823 1.22152442 0.30391545 0.97247455]\n",
+      "[[ 0.1127975  -0.00790294  0.02571064]\n",
+      " [-0.00790294  0.02343482 -0.01473869]\n",
+      " [ 0.02571064 -0.01473869  0.04323573]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "n_test = 5\n",
+    "m_test = 3\n",
+    "A_test = np.random.rand(m_test, n_test)\n",
+    "print(A_test)\n",
+    "print(A_test.shape)\n",
+    "y_test = np.random.rand(n_test)\n",
+    "y_true = y_test\n",
+    "print(y_true, '\\ny_true shape', y_true.shape)\n",
+    "alpha = np.random.rand(m_test)\n",
+    "print(alpha.shape)\n",
+    "y_pred = np.dot(alpha, A_test)\n",
+    "print(y_pred)\n",
+    "print(get_covariance_matrix(A_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sklearn r2 score is:  -1.613043819880836\n"
+     ]
+    }
+   ],
+   "source": [
+    "# r_2 = (np.mean())/()\n",
+    "\n",
+    "print('sklearn r2 score is: ', r2_score(y_true, y_pred))"
    ]
   },
   {
@@ -302,7 +371,200 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = np.random.rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# количество признаков\n",
+    "n = 30\n",
+    "# размер выборки\n",
+    "m = 100\n",
+    "def data_generator(n, m, cov=0.2):\n",
+    "  # cov - коэффициент, задающий ковариацию между значениями\n",
+    "  # исходная мартица ковариации (может не быть положительно определенной) \n",
+    "  pred_C = (1 - cov) * np.eye(n) + cov * np.ones((n, n))\n",
+    "  # вектор средних значений\n",
+    "  mean = np.zeros((n, ))\n",
+    "  # новая матрица ковариации, близкая к исходной, но положительно определенная\n",
+    "  # и с более разнообразными собственными значениями\n",
+    "  C = np.cov(sps.multivariate_normal(mean, pred_C).rvs(size=m).T)\n",
+    "  # поделим строки и стобцы на корень из диагонали чтобы генерируемые Х имели\n",
+    "  # единичную дисперсию\n",
+    "  diag_sqrt = np.sqrt(np.diag(C))\n",
+    "  C = C / diag_sqrt\n",
+    "  C = C.T / diag_sqrt\n",
+    "  # генерируем выборку - она имеет нулевое матожидание и (почти) единичную \n",
+    "  # дисперсию в каждом столбце\n",
+    "  X = sps.multivariate_normal(mean, C).rvs(size=m)\n",
+    "  # генерируем коэффициенты и делим их на соответствующее число, чтобы в итоге\n",
+    "  # дисперсия Z была равна 1\n",
+    "  a = sps.uniform(loc=0, scale=1).rvs(n)\n",
+    "  a /= (a.dot(a) * (1 - cov) + cov * (a.sum())**2)\n",
+    "  # генерируем предсказываемую переменную так, чтобы ее дисперсия была равна 1\n",
+    "  # для этого делим на соответствующий коэффициент \n",
+    "  Z = X.dot(a) + sps.norm(loc=0, scale=0.1).rvs(size=m)\n",
+    "  \n",
+    "  return X, Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 20) (100,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=20\n",
+    "n=100\n",
+    "X, Z=data_generator(m, n, 0.2)\n",
+    "print(X.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input:  X (m x n) - normalized feature matrix \n",
+    "#         k - selection parameter \n",
+    "#         y_true - predictor variable \n",
+    "\n",
+    "def forward_regression(X, k, y_true):\n",
+    "    (m,n)=X.shape\n",
+    "#     list of values x1,x2... indexes \n",
+    "    V=range(m)\n",
+    "    S=[]\n",
+    "    used=[]\n",
+    "    scores=[]\n",
+    "    r2 = -2\n",
+    "    alpha = np.zeros(m)\n",
+    "    alpha_new = np.zeros(m)\n",
+    "    j_max = 0\n",
+    "    res_sum = 0\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        \n",
+    "        for j in V:\n",
+    "            if j not in S:\n",
+    "                \n",
+    "                alpha_tmp=alpha\n",
+    "                alpha_tmp[j]=1\n",
+    "                \n",
+    "                y_pred = np.dot(alpha_tmp, X)\n",
+    "            \n",
+    "                if r2_score(y_true, y_pred) > r2:\n",
+    "                    r2 = r2_score(y_true, y_pred)\n",
+    "                    alpha_new = alpha_tmp\n",
+    "                    j_max=j\n",
+    "                 \n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "        alpha = alpha_new    \n",
+    "        S.append(j_max)\n",
+    "#         V.remove(j_max)\n",
+    "        \n",
+    "    return S, alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_regression(X, k, y_true):\n",
+    "    (m,n)=X.shape\n",
+    "#     list of values x1,x2... indexes \n",
+    "    V=range(m)\n",
+    "    S=[]\n",
+    "    used=[]\n",
+    "    scores=[]\n",
+    "    r2 = -2\n",
+    "    alpha = np.zeros(m)\n",
+    "    alpha_new = np.zeros(m)\n",
+    "    j_max = 0\n",
+    "    res_sum = np.zeros(n)\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        \n",
+    "        for j in V:\n",
+    "            if j not in S:\n",
+    "                y_pred = res_sum + X[j]\n",
+    "            \n",
+    "                if r2_score(y_true, y_pred) > r2:\n",
+    "                    r2 = r2_score(y_true, y_pred)\n",
+    "                    j_max=j\n",
+    "                 \n",
+    "        res_sum = res_sum + X[j_max]        \n",
+    "                \n",
+    "                \n",
+    "#         alpha = alpha_new    \n",
+    "        S.append(j_max)\n",
+    "#         V.remove(j_max)\n",
+    "        \n",
+    "    return S, alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 0, 0, 0, 0],\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0.]))"
+      ]
+     },
+     "execution_count": 435,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape\n",
+    "# y_true.shape\n",
+    "forward_regression(A, 5, Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 1., 0., 0.])"
+      ]
+     },
+     "execution_count": 387,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = np.zeros(5)\n",
+    "alpha[2] = 1\n",
+    "alpha"
+   ]
   }
  ],
  "metadata": {
